snapshots/serde/test_suite/tests/ui/remote/nonremote_getter.rs.snap
---
source: tests/common/mod.rs
expression: funcspace_struct
---
name: "[filepath]"
start_line: 1
end_line: 15
kind: unit
spaces:
  - name: S
    start_line: 9
    end_line: 13
    kind: impl
    spaces:
      - name: get
        start_line: 10
        end_line: 12
        kind: function
        spaces: []
        metrics:
          nargs:
            function_args: 0
            closure_args: 0
            function_args_average: 0
            closure_args_average: 0
            total: 0
            value: 0
            average: 0
            function_args_min: 0
            function_args_max: 0
            closure_args_min: 0
            closure_args_max: 0
          nexits:
            sum: 0
            average: 0
            min: 0
            max: 0
          cognitive:
            sum: 0
            value: 0
            average: 0
            min: 0
            max: 0
          cyclomatic:
            sum: 1
            value: 1
            average: 1
            min: 1
            max: 1
            modified:
              sum: 1
              value: 1
              average: 1
              min: 1
              max: 1
          halstead:
            unique_operators: 7
            total_operators: 7
            unique_operands: 3
            total_operands: 4
            length: 11
            estimated_program_length: 24.406
            purity_ratio: 2.219
            vocabulary: 10
            volume: 36.541
            difficulty: 4.667
            level: 0.214
            effort: 170.526
            time: 9.474
            bugs: 0.01
          loc:
            sloc: 3
            ploc: 3
            lloc: 0
            cloc: 0
            blank: 0
            sloc_average: 3
            ploc_average: 3
            lloc_average: 0
            cloc_average: 0
            blank_average: 0
            sloc_min: 3
            sloc_max: 3
            cloc_min: 0
            cloc_max: 0
            ploc_min: 3
            ploc_max: 3
            lloc_min: 0
            lloc_max: 0
            blank_min: 0
            blank_max: 0
          nom:
            functions: 1
            closures: 0
            functions_average: 1
            closures_average: 0
            total: 1
            average: 1
            functions_min: 1
            functions_max: 1
            closures_min: 0
            closures_max: 0
          tokens:
            tokens: 13
            average: 13
            min: 13
            max: 13
          mi:
            original: 134.261
            sei: 118.098
            visual_studio: 78.515
          abc:
            assignments: 0
            branches: 0
            conditions: 0
            magnitude: 0
            value: 0
            assignments_average: 0
            branches_average: 0
            conditions_average: 0
            assignments_min: 0
            assignments_max: 0
            branches_min: 0
            branches_max: 0
            conditions_min: 0
            conditions_max: 0
    metrics:
      nargs:
        function_args: 0
        closure_args: 0
        function_args_average: 0
        closure_args_average: 0
        total: 0
        value: 0
        average: 0
        function_args_min: 0
        function_args_max: 0
        closure_args_min: 0
        closure_args_max: 0
      nexits:
        sum: 0
        average: 0
        min: 0
        max: 0
      cognitive:
        sum: 0
        value: 0
        average: 0
        min: 0
        max: 0
      cyclomatic:
        sum: 2
        value: 1
        average: 2
        min: 1
        max: 1
        modified:
          sum: 2
          value: 1
          average: 2
          min: 1
          max: 1
      halstead:
        unique_operators: 8
        total_operators: 9
        unique_operands: 4
        total_operands: 5
        length: 14
        estimated_program_length: 32
        purity_ratio: 2.286
        vocabulary: 12
        volume: 50.189
        difficulty: 5
        level: 0.2
        effort: 250.947
        time: 13.942
        bugs: 0.013
      loc:
        sloc: 5
        ploc: 5
        lloc: 0
        cloc: 0
        blank: 0
        sloc_average: 2.5
        ploc_average: 2.5
        lloc_average: 0
        cloc_average: 0
        blank_average: 0
        sloc_min: 3
        sloc_max: 5
        cloc_min: 0
        cloc_max: 0
        ploc_min: 3
        ploc_max: 5
        lloc_min: 0
        lloc_max: 0
        blank_min: 0
        blank_max: 0
      nom:
        functions: 1
        closures: 0
        functions_average: 0.5
        closures_average: 0
        total: 1
        average: 0.5
        functions_min: 0
        functions_max: 1
        closures_min: 0
        closures_max: 0
      tokens:
        tokens: 17
        average: 8.5
        min: 4
        max: 13
      mi:
        original: 124.105
        sei: 103.548
        visual_studio: 72.576
      abc:
        assignments: 0
        branches: 0
        conditions: 0
        magnitude: 0
        value: 0
        assignments_average: 0
        branches_average: 0
        conditions_average: 0
        assignments_min: 0
        assignments_max: 0
        branches_min: 0
        branches_max: 0
        conditions_min: 0
        conditions_max: 0
      wmc:
        class_wmc_sum: 1
        interface_wmc_sum: 0
        total: 1
      npm:
        class_npm_sum: 0
        interface_npm_sum: 0
        class_methods: 1
        interface_methods: 0
        class_coa: 0
        interface_coa: 0
        total: 0
        total_methods: 1
        coa: 0
      npa:
        class_npa_sum: 0
        interface_npa_sum: 0
        class_attributes: 0
        interface_attributes: 0
        class_cda: 0
        interface_cda: 0
        total: 0
        total_attributes: 0
        cda: 0
  - name: main
    start_line: 15
    end_line: 15
    kind: function
    spaces: []
    metrics:
      nargs:
        function_args: 0
        closure_args: 0
        function_args_average: 0
        closure_args_average: 0
        total: 0
        value: 0
        average: 0
        function_args_min: 0
        function_args_max: 0
        closure_args_min: 0
        closure_args_max: 0
      nexits:
        sum: 0
        average: 0
        min: 0
        max: 0
      cognitive:
        sum: 0
        value: 0
        average: 0
        min: 0
        max: 0
      cyclomatic:
        sum: 1
        value: 1
        average: 1
        min: 1
        max: 1
        modified:
          sum: 1
          value: 1
          average: 1
          min: 1
          max: 1
      halstead:
        unique_operators: 3
        total_operators: 3
        unique_operands: 1
        total_operands: 1
        length: 4
        estimated_program_length: 4.755
        purity_ratio: 1.189
        vocabulary: 4
        volume: 8
        difficulty: 1.5
        level: 0.667
        effort: 12
        time: 0.667
        bugs: 0.002
      loc:
        sloc: 1
        ploc: 1
        lloc: 0
        cloc: 0
        blank: 0
        sloc_average: 1
        ploc_average: 1
        lloc_average: 0
        cloc_average: 0
        blank_average: 0
        sloc_min: 1
        sloc_max: 1
        cloc_min: 0
        cloc_max: 0
        ploc_min: 1
        ploc_max: 1
        lloc_min: 0
        lloc_max: 0
        blank_min: 0
        blank_max: 0
      nom:
        functions: 1
        closures: 0
        functions_average: 1
        closures_average: 0
        total: 1
        average: 1
        functions_min: 1
        functions_max: 1
        closures_min: 0
        closures_max: 0
      tokens:
        tokens: 6
        average: 6
        min: 6
        max: 6
      mi:
        original: 159.957
        sei: 155.17
        visual_studio: 93.542
      abc:
        assignments: 0
        branches: 0
        conditions: 0
        magnitude: 0
        value: 0
        assignments_average: 0
        branches_average: 0
        conditions_average: 0
        assignments_min: 0
        assignments_max: 0
        branches_min: 0
        branches_max: 0
        conditions_min: 0
        conditions_max: 0
metrics:
  nargs:
    function_args: 0
    closure_args: 0
    function_args_average: 0
    closure_args_average: 0
    total: 0
    value: 0
    average: 0
    function_args_min: 0
    function_args_max: 0
    closure_args_min: 0
    closure_args_max: 0
  nexits:
    sum: 0
    average: 0
    min: 0
    max: 0
  cognitive:
    sum: 0
    value: 0
    average: 0
    min: 0
    max: 0
  cyclomatic:
    sum: 4
    value: 1
    average: 2
    min: 1
    max: 1
    modified:
      sum: 4
      value: 1
      average: 2
      min: 1
      max: 1
  halstead:
    unique_operators: 16
    total_operators: 25
    unique_operands: 11
    total_operands: 15
    length: 40
    estimated_program_length: 102.054
    purity_ratio: 2.551
    vocabulary: 27
    volume: 190.196
    difficulty: 10.909
    level: 0.092
    effort: 2074.86
    time: 115.27
    bugs: 0.054
  loc:
    sloc: 15
    ploc: 12
    lloc: 0
    cloc: 0
    blank: 3
    sloc_average: 3.75
    ploc_average: 3
    lloc_average: 0
    cloc_average: 0
    blank_average: 0.75
    sloc_min: 1
    sloc_max: 15
    cloc_min: 0
    cloc_max: 0
    ploc_min: 1
    ploc_max: 12
    lloc_min: 0
    lloc_max: 0
    blank_min: 0
    blank_max: 3
  nom:
    functions: 2
    closures: 0
    functions_average: 0.5
    closures_average: 0
    total: 2
    average: 0.5
    functions_min: 0
    functions_max: 1
    closures_min: 0
    closures_max: 0
  tokens:
    tokens: 54
    average: 13.5
    min: 4
    max: 31
  mi:
    original: 98.92
    sei: 67.417
    visual_studio: 57.848
  abc:
    assignments: 0
    branches: 0
    conditions: 0
    magnitude: 0
    value: 0
    assignments_average: 0
    branches_average: 0
    conditions_average: 0
    assignments_min: 0
    assignments_max: 0
    branches_min: 0
    branches_max: 0
    conditions_min: 0
    conditions_max: 0
  wmc:
    class_wmc_sum: 1
    interface_wmc_sum: 0
    total: 1
  npm:
    class_npm_sum: 0
    interface_npm_sum: 0
    class_methods: 1
    interface_methods: 0
    class_coa: 0
    interface_coa: 0
    total: 0
    total_methods: 1
    coa: 0
  npa:
    class_npa_sum: 0
    interface_npa_sum: 0
    class_attributes: 1
    interface_attributes: 0
    class_cda: 0
    interface_cda: 0
    total: 0
    total_attributes: 1
    cda: 0
